footer finished. Need fix that ugly scrollbar in slides. 2

--- a/main.css
+++ b/main.css
@@ -286,7 +286,7 @@ td {
   position: relative;
   background-color: var(--black);
   width: 100%;
-  height: 875px;
+  height: auto;
   margin-top: 64px;
 }
 
@@ -417,7 +417,6 @@ td {
   font-weight: 500;
   font-size: 14px;
   line-height: 18px;
-  
 }
 
 .main-carousel-plan .price {
